--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,17 @@ body {
     min-width: 450px;
 }
 
+.text {
+    position: absolute;
+    top: 5%;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-weight: 700;
+    font-size: 36px;
+    font-style: italic;
+    color: rgb(104, 227, 88);
+    text-shadow: 4px 4px rgb(155, 59, 42);
+}
+
 .scene {
     position: relative;
     width: 400px;
